grammar.js
    sourceFile: $ => choice(
      seq(
        'package', $.packageIde, ';', 
          repeat($.exportDecl),
          repeat($.importDecl),
          repeat($.packageStmt),
        'endpackage', optseq(':', $.packageIde)
      ),
      // NOTE: Contrary to spec, the actual bsc implementation allows files 
      //       without a package declaration.
      seq(
        repeat($.exportDecl),
        repeat($.importDecl),
        repeat($.packageStmt),
      ),
    ),

    // NOTE: Ignore compiler directives for now. Assume pre-processed source.
    //       The directives use C syntax, so any C pre-processor works on these.
    //       Alternatively, we could use preprocessor rules from tree-sitter-c
    // compilerDirective: $ => choice(
    //   seq("'include", '"', $.filename, '"'),
    //   seq("'include", '<', $.filename, '>'),
    //   seq("'include", $.macroInvocation),
    //   seq("'line", $.decDigits, '"', $.filename, '"', $.level),
    //   seq("'define", $.macroName, optseq('(', $.macroFormals, ')'), $.macroText),
    // ),
    // level: $ => choice('0', '1', '2'),

    packageStmt: $ => choice(
      $.moduleDef,
      $.interfaceDecl, 
      $.typeDef, 
      $.varDecl, 
      // NOTE: Only the below "varAssign" rule choice is valid at packageStmt scope,
      //       contrary to the spec.
      prec.left(seq($.lValue, '=', $.expression, ';')),
      $.functionDef,
      $.typeclassDef,
      $.typeclassInstanceDef,
      // TODO: Add externModuleImport, sec. 15 from BSV lang ref
      // $.externModuleImport, 
      // NOTE: missing in the spec:
      $.externCImport, 
    ),

    //  NOTE: BSV lang ref guide requires upper case; 
    //  the actual bsc implementation does not care...
    type: $ => choice(
      $.typePrimary, 
      prec.left(seq(
        $.typePrimary, '(', $.type, repeatseq(',', $.type), ')'
      ))
    ),

    typePrimary: $ => choice(
      seq($.typeIde, optseq('#', '(', $.type, repeatseq(',', $.type), ')')),
      $.typeNat,
      seq('bit', '[', $.typeNat, ':', $.typeNat, ']')
    ),

    // NOTE: To quote from BSV reference manual: Data types in BSV are case 
    // sensitive. The first character of a type is almost always uppercase, the
    // only exceptions being the types int and bit for compatibility with Verilog.
    typeIde: $ => $.identifier,
    typeNat: $ => $.decDigits,

    // ================================================================
    // sec 5.2 Interface declaration

    typeDefType: $ => seq(
      $.typeIde, optional($.typeFormals)
    ),
    typeFormals: $ => seq(
      '#', '(', $.typeFormal, repeatseq(',', $.typeFormal), ')'
    ),
    typeFormal: $ => seq(
      // NOTE 1: The spec has a type for "typeFormal::= [ numeric | string ] type typeIde"
      //         The "type" string should be optional: we can have "numeric type typePrimary"
      //         or "type typePrimary". Also allow "parameter".
      // NOTE 2: The spec wrongly does not allow nested types, do s/typeIde/typePrimary
      optional(choice('numeric', 'string', 'parameter')), optional('type'), $.typePrimary
    ),

    moduleDef: $ => seq(
      optional($.attributeInstances), 
      $.moduleProto,
        repeat($.moduleStmt), 
      'endmodule', optseq(':', $.identifier)
    ),

    moduleProto: $ => seq(
      'module', optseq('[', $.type, ']'), $.identifier,
      optional($.moduleFormalParams), '(', optional($.moduleFormalArgs), ')',
      optional($.provisos), ';'
    ),
    moduleFormalArgs: $ => choice(
      seq(optional($.attributeInstances), $.type),
      seq(optional($.attributeInstances), $.type, $.identifier,
          repeatseq(',', optional($.attributeInstances), $.type, $.identifier))
    ),

    moduleStmt: $ => choice(
      $.moduleInst,
      $.methodDef,
      $.subinterfaceDef,
      $.rule, 
      $.varDo,
      $.varDeclDo,
      // NOTE: The spec {module, function, action, actionValue, etc}Stmt rules 
      //       are missing semicolons in some places.
      prec.left(seq($.functionCall, ';')),
      $.systemTaskStmt,
      prec.left(seq('(', $.expression, ')', ';')),
      $.returnStmt,
      $.varDecl,
      $.varAssign,
      $.functionDef,
      $.moduleDef,
      ctxtBeginEndStmt($, $.moduleStmt),
      ctxtIf($, $.moduleStmt),
      ctxtCase($, $.moduleStmt),
      ctxtFor($, $.moduleStmt),
      ctxtWhile($, $.moduleStmt),
    ),


    // ============================================================
    // sec 5.4 Module and interface instantiation

    // sec 5.4.1 Short form instantiation
    moduleInst: $ => prec.left(seq(
      optional($.attributeInstances),
      // NOTE: Contrary to spec, we make the type optional, since
      //       we could be assigning to an already declared Vector for example.
      //       We also do s/identifier/lValue to allow asigning to array indexes,
      //       or to allow things like concurrent registers.
      optional($.type), $.lValue, '<-', $.moduleApp, ';'
    )),
    moduleApp: $ => prec.left(seq(
      // NOTE: Parens are optional in the bsc implementation.
      $.identifier, optseq('(', 
        optseq($.moduleActualParamArg, repeatseq(',', $.moduleActualParamArg)),
      ')')
    )),
    typeDef: $ => choice(
      $.typedefSynonym, 
      $.typedefEnum, 
      $.typedefStruct,
      $.typedefTaggedUnion
    ),

    typedefStruct: $ => prec.left(seq(
      'typedef', 'struct', '{', 
        repeat($.structMember), 
      '}', $.typeDefType, optional($.derives), ';'
    )),
    structMember: $ => choice(
      prec.left(seq($.type, $.identifier, ';')),
      prec.left(seq($.subUnion, $.identifier, ';'))
    ),
    typeclassIde: $ => $.Identifier,
    derives: $ => prec.left(seq(
      'deriving', '(', $.typeclassIde, repeat(seq(',', $.typeclassIde)), ')'
    )),

    // ================================================================
    // sec 9 Variable declarations and statements

    varDecl: $ => choice(
      prec.left(seq($.type, $.varInit, repeatseq(',', $.varInit), ';')),
      prec.left(seq('let', $.identifier, '=', $.expression, ';')),
      // NOTE: The spec is missing the below rule to allow declarations like:
      //       Reg#(Maybe#(t)) data();
      prec.left(seq($.type, $.identifier, 
        '(', 
          optseq($.expression, repeatseq(',', $.expression)),
        ')', ';')
      ),
    ),

    varInit: $ => prec.left(seq(
      $.identifier, optional($.arrayDims), optseq('=', $.expression)
    )),
    lValue: $ => choice(
      $.identifier, 
      prec.right(seq($.lValue, '.', $.identifier)),
      prec.right(seq($.lValue, '[', $.expression, ']')),
      prec.right(seq($.lValue, '[', $.expression, ':', $.expression, ']'))
    ),
    returnStmt: $ => seq('return', $.expression, ';'),


    // ================================================================
    // sec 10 Expressions

    expression: $ => choice(
      $.condExpr, 
      $.operatorExpr, 
      $.exprPrimary
    ),

    exprPrimary: $ => choice(
      $.identifier,
      $.intLiteral,
      $.realLiteral,
      $.stringLiteral,
      $.systemFunctionCall,
      field('dont_care', '?'),
      prec.left(seq('(', $.expression, ')')),
      seq('valueOf', '(', $.type, ')'),
      seq('valueof', '(', $.type, ')'),
      $.bitConcat,
      $.bitSelect,
      $.beginEndExpr,
      $.actionBlock,
      $.actionValueBlock,
      $.functionCall,
      $.methodCall,
      $.typeAssertion,
      $.structExpr,
      prec.left(seq($.exprPrimary, '.', $.identifier)),
      $.taggedUnionExpr,
      $.interfaceExpr,
      $.rulesExpr,
      $.seqFsmStmt,
      $.parFsmStmt,
    ),

    functionCall: $ => prec.left(40, seq(
      $.exprPrimary, 
      '(', 
        optseq($.expression, repeatseq(',', $.expression)),
      ')'
    )),
    // We keep the parens as optional in method calls, as the GLR can recover from
    // the left recursion due to the ".identifier" part that follows.
    intLiteral: $ => choice(
      "'0'", 
      "'1", 
      $.sizedIntLiteral, 
      $.unsizedIntLiteral
    ),
    unsizedIntLiteral: $ => choice(
      seq(optional($.sign), $.baseLiteral),
      seq(optional($.sign), $.decNum)
    ),
    decNum: $ => seq($.decDigits, optional($.decDigitsUnderscore)),
    decDigits: $ => /[0-9]+/,
    identifier: $ => token(/[a-zA-Z_\p{L}][a-zA-Z0-9_\p{L}]*/), // Identifier starting with any case.
    comment: $ => token(choice(
      seq('//', /.*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),

  },
